--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "backend_server",
   "version": "1.0.0",
   "description": "This is for backend code segment",
-  "main": "index.js",
+  "main": "./api/*.ts",
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "npm i"
+    "build" : "npm i",
+    "vercel-build" : "echo hello"
   },
   "keywords": [],
   "author": "",
