--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node index.js",
     "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "npm i",
-    "vercel-build" : "echo hello"
+    "build" : "npm i"
   },
   "keywords": [],
   "author": "",
